@@ -1,3 +1,8 @@
+Wed Aug 23 15:29:00 BST 2000 Olly Betts
+
+	* Updated docs to reflect OmDatabaseGroup merging into OmDatabase.
+	  Can't update HTML generated from C++ by gvim though.
+
 Wed Aug 23 15:10:00 BST 2000 Olly Betts
 
 	* WARNING: Incompatible changes to API!
